<resources>
    <string name="app_name">Advanced PassGen</string>
    <string name="nav_header_subtitle">support@codedead.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="info">Info</string>
    <string name="support">Support</string>
    <string name="refresh_to_start">Please refresh or add passwords to get started</string>
    <string name="title_activity_settings">Settings</string>

    <string name="about">Advanced PassGen was created by DeadLine.\n\nThis app can be used to generate strong and secure passwords on the fly. Advertisements and trackers are not included in this build.\n\n All images were provided by Google, except for the Facebook, GitHub and Bluesky logo, which were provided by Icons8 (icons8.com).\n\nCopyright © 2025 CodeDead</string>
    <string name="logo">Logo</string>
    <string name="facebook_logo">Facebook logo</string>
    <string name="bluesky_logo">Bluesky logo</string>
    <string name="codedead_logo">CodeDead logo</string>
    <string name="menu_tools">Tools</string>
    <string name="refresh">Refresh</string>
    <string name="support_info">If you found a bug or if you have suggestions for new features, you can reach out to us.\n\nYou can either create a new issue on GitHub or you can send an email to support@codedead.com</string>
    <string name="github_logo">GitHub logo</string>
    <string name="email_logo">Email logo</string>
    <string name="text_send_mail">Send us a mail!</string>
    <string name="copy_button">Copy</string>
    <string name="password_copied">Password copied to clipboard!</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="security">Security</string>
    <string name="prevent_screenshot">Prevent screenshots</string>
    <string name="prevent_screenshot_summary">Try to prevent screenshots and recordings from being taken when sensitive data is displayed</string>
    <string name="general">General</string>
    <string name="applanguage_summary">The display language for the app</string>
    <string name="application_languages">Language</string>
    <string name="password_generation">Password generation</string>
    <string name="custom_character_set">Custom character set</string>
    <string name="custom_character_set_summary">Leave blank to use default settings</string>
    <string name="minimum_length">Minimum length</string>
    <string name="minimum_length_summary">The minimum length of the generated password</string>
    <string name="maximum_length">Maximum length</string>
    <string name="maximum_length_summary">The maximum length of the generated password</string>
    <string name="small_letters">Small letters</string>
    <string name="small_letters_summary">Include small letters in the generated password</string>
    <string name="capital_letters">Capital letters</string>
    <string name="capital_letters_summary">Include capital letters in the generated password</string>
    <string name="spaces">Spaces</string>
    <string name="spaces_summary">Include spaces in the generated password</string>
    <string name="special_characters">Special characters</string>
    <string name="special_characters_summary">Include special characters in the generated password</string>
    <string name="numbers">Numbers</string>
    <string name="numbers_summary">Include numbers in the generated password</string>
    <string name="brackets">Brackets</string>
    <string name="brackets_summary">Include brackets in the generated password</string>
    <string name="password_amount">Password amount</string>
    <string name="password_amount_summary">The amount of passwords to generate</string>
    <string name="automatic_thread_management">Automatic threading</string>
    <string name="automatic_thread_management_summary">Automatically manage threading for password generation</string>
    <string name="threads">Threads</string>
    <string name="threads_summary">The amount of threads to use for password generation</string>
    <string name="display_password_strength">Display password strength</string>
    <string name="display_password_strength_summary">Display the strength of the generated password in the list</string>
</resources>
