<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/text_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/about"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/BtnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/facebook_logo"
                app:srcCompat="@drawable/icons8_facebook_32" />

            <ImageButton
                android:id="@+id/BtnBluesky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bluesky_logo"
                app:srcCompat="@drawable/icons8_bluesky" />

            <ImageButton
                android:id="@+id/BtnWebsiteAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/codedead_logo"
                app:srcCompat="@drawable/baseline_link_24" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
